[package]
name = "iced_test"
version = "0.1.0"
authors = ["Irving Morales <irvingfisica@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2", features = ["canvas", "tokio", "debug"] }
tokio = { version = "0.3", features = ["sync"]}
itertools = "0.10"
rustc-hash = "1.1"
rand = "0.8"